--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
+    "@azure/openai": "1.0.0-beta.11",
     "@google/generative-ai": "^0.2.0",
     "consola": "^3.2.3",
     "destr": "^2.0.2",
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
     "fastify-sse-v2": "^3.1.2",
+    "lack-proxy": "^1.3.7",
     "ofetch": "^1.3.3",
     "openai": "^4.26.0"
   },
